// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fragment C1CCC1 1`] = `
[
  {
    "atomMap": [
      0,
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      1,
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      0,
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 0,
        "atom2": 3,
        "index": 3,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      2,
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 0,
        "atom2": 3,
        "index": 3,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
  },
  {
    "fragmentType": "molecular ion",
    "idCode": "gBP@DiVj\`@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 8,
      },
      "charge": 0,
      "mass": 56.10646961938721,
      "mf": "C4H8",
      "monoisotopicMass": 56.06260025784,
      "unsaturation": 1,
    },
  },
]
`;

exports[`fragment CC 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "fragmentType": "molecular ion",
    "idCode": "eF@Hp@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 6,
      },
      "charge": 0,
      "mass": 30.06911631780516,
      "mf": "C2H6",
      "monoisotopicMass": 30.04695019338,
      "unsaturation": 0,
    },
  },
]
`;

exports[`fragment CCC 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
  },
  {
    "fragmentType": "molecular ion",
    "idCode": "eM@Hz@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 8,
      },
      "charge": 0,
      "mass": 44.095733722651964,
      "mf": "C3H8",
      "monoisotopicMass": 44.06260025784,
      "unsaturation": 0,
    },
  },
]
`;

exports[`fragment CCCCC2CCC1C(CC)CC(=O)CC1C2 - with Hose Codes 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "eM@HzCaJBhOIewzJCaUSaU@",
      "gC\`@Dkj@xPhIP^pr\\lQHGBjcaU@",
      "gJP@DkZhCaB\`eAxcIrsY~bPNEUGBj@",
      "gNp@DkVjj@xPhIP^hr\\lvFOtRApjhxUP",
    ],
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      10,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "eM@HzCaJBhOIewzJCaUSaU@",
      "gJP@DkjhCaB\`eA{CIrc}D\`\\JjNET",
      "dax@@DkfZjjDhCa@hHhOTFQrQdEgzH\`NEUCaU@",
      "dcLH@@rJIJIHusUUUVEQUGDApcTDtGnSBbh[Nb^WOtQF\\JjWBj@",
    ],
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      5,
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daD@@DjWzZjjdAM@xHJBJ@jAjCqADXVMGzD\`NEUCaUDxUSNET",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAE@UAMAxPbLRL\`lkIa\\PdApjh\\JhgBjepj\`",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBE@R\`eP^LBHXbLPSJXsNXKIP[KY~aD@xUTGBjHxUTgBj@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYPRhETAjCsdYcBQRFQsAYKEQkcY[GY{OtHcGBjdxURgBjLxUP",
    ],
    "idCode": "gC\`D@lyYRVh@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 4,
      },
      "charge": 0,
      "mass": 28.053234809693606,
      "mf": "C2H4",
      "monoisotopicMass": 28.03130012892,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gC\`@Dij@xPhIP^PrY~bPNEUGBj@",
      "gJP@DiZhCaB\`eAxcIbs]~bPNEUGBj@",
      "gNp@Di^jj@xPhIP^hrXlwFOtRApjhxUP",
      "diD@@Di^Vjj\`Ca@hHhO\\FQbYgEEXv_hb@xUTNET",
    ],
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gJP@DjZhCaB\`eAyBIgzI@xUT\\Jh",
      "dax@@DjVZjj@hCa@hHhOTDQbQfEwzH\`NEUCaU@",
      "dcLH@@rJIJIHusUUUVEQUGDApaTCTGnSBbh[Nb^WOtQB\\JigBj@",
      "dk\\H@@RYVU^ntvjjjjpjJhx\`NDJ\`Z\`|jYfEEPv]@yOKay~bHSaULxUP",
    ],
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      11,
      12,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCvIfXT_hRPxURNEUcaUDxUP",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`|rYfEEPt]gzDdNETcaUXxUQNET",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`r\`J\`}JYfEEPt]\`yNKwzDdNETcaUXxUQNET",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhLhBhOZfYaQTMGXNSb}lGgzDdNETcaUXxUQNET",
    ],
    "idCode": "gJQDDEdkJS\\t@@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 2,
        "O": 1,
      },
      "charge": 0,
      "mass": 42.03675822590033,
      "mf": "C2H2O",
      "monoisotopicMass": 42.01056468403,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      12,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCvIfXT_hRPxURNEUcaUDxUP",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`|rYfEEPt]gzDdNETcaUXxUQNET",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`hhDhLhBhORfYaQTMGXNSbq~aICaUHxUVNETSaU@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GAHTBJCE@R\`|YFXpdTad\\pVRqTZxvVs}BIApjdNEUapjbNET",
    ],
    "idCode": "gJQDDEdkJS\\t@@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 2,
        "O": 1,
      },
      "charge": 0,
      "mass": 42.03675822590033,
      "mf": "C2H2O",
      "monoisotopicMass": 42.01056468403,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gC\`@Dij@xPhIP^PrY~bPNEUGBj@",
      "gNp@DiYjj@xPhIP^HrXhv_hdCaUQpj\`",
      "diD@@DiYVjj\`Ca@hHhO\\FQbQfEeXw_hb@xUTNET",
      "dmt@@DiYWafjjjdRcb@xPJBJCtadXdYaYVMwPN_hb@xUTNET",
    ],
    "idCode": "gC\`H@liKT@@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 7,
      },
      "charge": 0,
      "mass": 43.08779296859618,
      "mf": "C3H7",
      "monoisotopicMass": 43.05477522561,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      11,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "daD@@DjWZZjjdAT\`xHJBJBjAjCqADYTMgzD\`NEUCaUTxUSNET",
      "dcLH@@RYVUZYjjjkBUQdGAIPYPEPUP^yLsBbhZNp\\PdQpjl\\JhgBjipj\`",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhLhBhJhOJfYaQTMGXNSbqo_hRHxUVNETSaUTxUP",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTFJ@eAR\`|YFXpdTad\\pVRqTZxvVs}BHapjlNETQpjjNET",
    ],
    "idCode": "gGQDLEfkJRwSP@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 4,
        "O": 1,
      },
      "charge": 0,
      "mass": 56.06337563074713,
      "mf": "C3H4O",
      "monoisotopicMass": 56.026214748490005,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      8,
      11,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "didH@@RYVzYjjiBHX\`NBb\`R\`J\`Z\`}bXTMGzDdNETcaUDxUSNET",
      "dcLH@@RYVUzYjjjkBHjab@xJJAJ@jAjCwIfXTUCQvSgzDdNETcaUDxUSNET",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`J\`Z\`|jYfEEPt]\`yNKqy~aICaUHxUQNETsaU@",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhBhFhOZfYaQTMGXNSb}lGgzDdNETcaUDxUSNET",
    ],
    "idCode": "gGPD@leYRYZj@@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 8,
      },
      "charge": 0,
      "mass": 56.10646961938721,
      "mf": "C4H8",
      "monoisotopicMass": 56.06260025784,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gJP@DjZhCaB\`eAyBIgzI@xUT\\Jh",
      "dax@@DjUZjh@xPJBJCuADXfYaY~bHCaUPxUP",
      "dmt@@DjUVvFjjjdBbb@xPJBJCpaDXfYaYTMgY~bHCaUPxUP",
      "dkl@@DjUVuXZjjjk@hh\`R@xPJBJCvaDXfYaYTMgXLSb}~bHCaUPxUP",
    ],
    "idCode": "gJPH@liJuP@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 9,
      },
      "charge": 0,
      "mass": 57.114410373442986,
      "mf": "C4H9",
      "monoisotopicMass": 57.07042529007,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      8,
      12,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "didH@@RYUZYjjiJHZ\`NBb\`R\`j\`Z\`}bYTMGzDdNETcaUTxUSNET",
      "dcLH@@RYVWZYjjjkBHjab@xJJAJBjAjCwIfXTUCPNSgzDdNETcaUTxUSNET",
      "dk\\H@@RYVUVfTvjjjjpbJhX\`NBb\`R\`j\`Z\`|jYfEEPt]\`yN[qy~aICaUHxUUNETsaU@",
      "dg|H@@RYVUUieMjjjjhbHjabEHC\`hhDhJhFhOZfYaQTMGXNSbqoGgzDdNETcaUTxUSNET",
    ],
    "idCode": "daxHPDAYiYR[[fj\`@",
    "mfInfo": {
      "atoms": {
        "C": 5,
        "H": 8,
        "O": 1,
      },
      "charge": 0,
      "mass": 84.11661044044072,
      "mf": "C5H8O",
      "monoisotopicMass": 84.05751487741,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      4,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daD@@DjWjZjjdB\`b@xHJBJAJ@jCqADXfEGzD\`NEUCaUHxUQNET",
      "dmt@@LdbRTJkjjjjpJBHx\`NBB\`b\`R\`J\`|HQFIfXTUgPN_hR@xUTNETcaUDxUP",
      "foAA@@@YEDeDehUSbmMUUUUQBTThxQH\`GABTCJBUAj\`|iFDbdLsdRaVZpvVs}BHQpjfNEUIpjmNET",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DIPLhITAjCudYcBQRFYrAYJEX[KX{OY~aDHxUSGBjdxUQgBj@",
    ],
    "idCode": "dax@P@VRVTfWZjh@@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 12,
      },
      "charge": 0,
      "mass": 84.15970442908082,
      "mf": "C6H12",
      "monoisotopicMass": 84.09390038676,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      4,
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "gOp@DjWkjjhJApQPR\`U@ZCqDSEas}B\`\\JjNETgBjKaU@",
      "deT@@DjUWkjjjk@hjcb@xHJBJAJ@jCwADXfYaYT]GzD\`NEUCaUHxUQNET",
      "dg|@@DjUUWj{SjjjjjHJJhxaR@xHJBJAJ@jCraDXfYaYTMgPNKGzD\`NEUCaUHxUQNET",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DYPRhETAjCudYcBQRFYrAYJEX[KX{OY~aDXxUTgBjTxUQgBj@",
    ],
    "idCode": "dax@P@VRVTfWZjh@@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 12,
      },
      "charge": 0,
      "mass": 84.15970442908082,
      "mf": "C6H12",
      "monoisotopicMass": 84.09390038676,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      8,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "did@@DjYmajjjpJHHR\`NBB\`b\`R\`J\`|PQDIAY~aHCaUPxURNETSaU@",
      "dk\\H@@RYVUVfTvjjjjpjJHZ\`NBR\`J\`j\`Z\`|JYfEEPt]\`yN_hRHxUQNEUSaULxUP",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhBhJhFhOZfYaQTMGXNSbqoGgzDbNETSaUTxUSNET",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTAJBe@r\`|YFXpdTad\\pVRqTZxvVs}BHapjbNEUQpjfNET",
    ],
    "idCode": "diDHPFAYEYrJIJFjf\`@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 10,
        "O": 1,
      },
      "charge": 0,
      "mass": 98.14322784528753,
      "mf": "C6H10O",
      "monoisotopicMass": 98.07316494186999,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      5,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "gOp@DjWkjjhJApQPR\`m@zCqDSKcs}B\`\\JjNEUWBj[aU@",
      "deT@@DjVVhZjjk@hR\`b@xHJBJBj@ZCwADXdYaQVCgzD\`NEUCaUTxUPnET",
      "dg|H@@rJIJIKPurzuUUUTQTUQqDdApQTCTBtFtGiSBbh[NbXWMp|PdIpjf\\JiWBjupj\`",
      "f\`qA@@@YEDeDdeJj\\TYjjjjjbDhiQpbQ@NBDhFTBj@uAxrLqaHiCLy@leBlMel]gzDPcaUL\\JiSaUF\\Jh",
    ],
    "idCode": "diD@P@VZVTeevjj\`@",
    "mfInfo": {
      "atoms": {
        "C": 7,
        "H": 14,
      },
      "charge": 0,
      "mass": 98.18632183392762,
      "mf": "C7H14",
      "monoisotopicMass": 98.10955045122,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      4,
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "daD@@DjWzZjjdBab@xHJBJBjAjCqADYVMGzD\`NEUCaUTxUSNET",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAEAUAMAxPbLRL\`lkIa\\PdApjh\\JjgBjepj\`",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBEAR\`eP^LBHXbLPSJXsNXKIP[KY~aD@xUTGBjhxUTgBj@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYP\\hITBjCsdYcBQRFQsAYKEQkcY[GY{OtHcGBjxxUTgBjTxUP",
    ],
    "idCode": "diD@P@VVVTfU^jj\`@",
    "mfInfo": {
      "atoms": {
        "C": 7,
        "H": 14,
      },
      "charge": 0,
      "mass": 98.18632183392762,
      "mf": "C7H14",
      "monoisotopicMass": 98.10955045122,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      6,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daD@@DjYvzjjdAQ@xHJBJAJ@jCqADPfEgzD\`NEUCaUHxUQNET",
      "dcl@@LdbbTRkSruUUUQAQAFDRPGAAPQPIPEP^DHbDsHKJqlfOtI@\\JjGBjQpjb\\Jh",
      "foAA@@@YEDeDddcQbcMUUUUQBDThXPh\`GABTCJCeAJ\`}iFXpdTad\\pVRqTFrv_hQBNETqpjnNEUIpj\`",
      "f\`qA@@@YEDeDddbjLTYjjjjjbDHiPpaQ@NBDhFTGJBUAzrLqaHiCHy\`lebhuqlmclPbD\\JicaU\\\\JjSaU@",
    ],
    "idCode": "ded@P@V^VTeeWjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 16,
      },
      "charge": 0,
      "mass": 112.21293923877442,
      "mf": "C8H16",
      "monoisotopicMass": 112.12520051568,
      "unsaturation": 1,
    },
  },
  {
    "atomMap": [
      7,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daD@@DjYvzjjdAQ@xHJBJAJ@jCqADPfEgzD\`NEUCaUHxUQNET",
      "dcl@@LdbbTRkSruUUUQAQAFDRPGAAPQPIPEP^DHbDsHKJqlfOtI@\\JjGBjQpjb\\Jh",
      "foAA@@@YEDeDddcQbcMUUUUQBDThXPh\`GABTCJCeAJ\`}iFXpdTad\\pVRqTFrv_hQBNETqpjnNEUIpj\`",
      "f\`qA@@@YEDeDddbjLTYjjjjjbDHiPpaQ@NBDhFTGJBUAzrLqaHiCHy\`lebhuqlmclPbD\\JicaU\\\\JjSaU@",
    ],
    "idCode": "dmtHPEAYIYRYf}XZjjf@@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 12,
        "O": 1,
      },
      "charge": 0,
      "mass": 124.1805811468696,
      "mf": "C8H12O",
      "monoisotopicMass": 124.08881500633,
      "unsaturation": 3,
    },
  },
  {
    "atomMap": [
      6,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "gOp@DjWkjjhJApQPR\`m@zCqDSKcs}B\`\\JjNEUWBj[aU@",
      "deT@@DjVVhZjjk@hR\`b@xHJBJBj@ZCwADXdYaQVCgzD\`NEUCaUTxUPnET",
      "dg|H@@rJIJIKPurzuUUUTQTUQqDdApQTCTBtFtGiSBbh[NbXWMp|PdIpjf\\JiWBjupj\`",
      "f\`qA@@@YEDeDdeJj\\TYjjjjjbDhiQpbQ@NBDhFTBj@uAxrLqaHiCLy@leBlMel]gzDPcaUL\\JiSaUF\\Jh",
    ],
    "idCode": "dcLHPEAYeYRYeevzjjih@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 14,
        "O": 1,
      },
      "charge": 0,
      "mass": 138.20719855171637,
      "mf": "C9H14O",
      "monoisotopicMass": 138.10446507079,
      "unsaturation": 3,
    },
  },
  {
    "atomMap": [
      7,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "daD@@DjWzZjjdBab@xHJBJBjAjCqADYVMGzD\`NEUCaUTxUSNET",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAEAUAMAxPbLRL\`lkIa\\PdApjh\\JjgBjepj\`",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBEAR\`eP^LBHXbLPSJXsNXKIP[KY~aD@xUTGBjhxUTgBj@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYP\\hITBjCsdYcBQRFQsAYKEQkcY[GY{OtHcGBjxxUTgBjTxUP",
    ],
    "idCode": "dcLHPMAYeYRYfWVFjjjX@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 14,
        "O": 1,
      },
      "charge": 0,
      "mass": 138.20719855171637,
      "mf": "C9H14O",
      "monoisotopicMass": 138.10446507079,
      "unsaturation": 3,
    },
  },
  {
    "atomMap": [
      7,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "did@@DjYmajjjpJHHR\`NBB\`b\`R\`J\`|PQDIAY~aHCaUPxURNETSaU@",
      "dk\\H@@RYVUVfTvjjjjpjJHZ\`NBR\`J\`j\`Z\`|JYfEEPt]\`yN_hRHxUQNEUSaULxUP",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhBhJhFhOZfYaQTMGXNSbqoGgzDbNETSaUTxUSNET",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTAJBe@r\`|YFXpdTad\\pVRqTZxvVs}BHapjbNEUQpjfNET",
    ],
    "idCode": "dcL@P@VRVTfYwUnjjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 18,
      },
      "charge": 0,
      "mass": 138.25029254035647,
      "mf": "C10H18",
      "monoisotopicMass": 138.14085058014,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      5,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 15,
        "atom2": 16,
        "index": 16,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daD@@DjWjZjjdB\`b@xHJBJAJ@jCqADXfEGzD\`NEUCaUHxUQNET",
      "dmt@@LdbRTJkjjjjpJBHx\`NBB\`b\`R\`J\`|HQFIfXTUgPN_hR@xUTNETcaUDxUP",
      "foAA@@@YEDeDehUSbmMUUUUQBTThxQH\`GABTCJBUAj\`|iFDbdLsdRaVZpvVs}BHQpjfNEUIpjmNET",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DIPLhITAjCudYcBQRFYrAYJEX[KX{OY~aDHxUSGBjdxUQgBj@",
    ],
    "idCode": "dklHPEAYMYRYeeunjjjZ\`@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 16,
        "O": 1,
      },
      "charge": 0,
      "mass": 152.23381595656318,
      "mf": "C10H16O",
      "monoisotopicMass": 152.12011513525002,
      "unsaturation": 3,
    },
  },
  {
    "atomMap": [
      6,
      16,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 4,
        "atom2": 16,
        "index": 17,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "gOp@DjWkjjhJApQPR\`U@ZCqDSEas}B\`\\JjNETgBjKaU@",
      "deT@@DjUWkjjjk@hjcb@xHJBJAJ@jCwADXfYaYT]GzD\`NEUCaUHxUQNET",
      "dg|@@DjUUWj{SjjjjjHJJhxaR@xHJBJAJ@jCraDXfYaYTMgPNKGzD\`NEUCaUHxUQNET",
      "fhiA@@@YEDeDdeJeSbcMUUUUUDIQRcaDb@\\DYPRhETAjCudYcBQRFYrAYJEX[KX{OY~aDXxUTgBjTxUQgBj@",
    ],
    "idCode": "dklHPCAYUYRVYewijjji\`@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 16,
        "O": 1,
      },
      "charge": 0,
      "mass": 152.23381595656318,
      "mf": "C10H16O",
      "monoisotopicMass": 152.12011513525002,
      "unsaturation": 3,
    },
  },
  {
    "atomMap": [
      7,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "didH@@RYUZYjjiJHZ\`NBb\`R\`j\`Z\`}bYTMGzDdNETcaUTxUSNET",
      "dcLH@@RYVWZYjjjkBHjab@xJJAJBjAjCwIfXTUCPNSgzDdNETcaUTxUSNET",
      "dk\\H@@RYVUVfTvjjjjpbJhX\`NBb\`R\`j\`Z\`|jYfEEPt]\`yN[qy~aICaUHxUUNETsaU@",
      "dg|H@@RYVUUieMjjjjhbHjabEHC\`hhDhJhFhOZfYaQTMGXNSbqoGgzDdNETcaUTxUSNET",
    ],
    "idCode": "dkl@P@VQVTfYWu[jjjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 11,
        "H": 20,
      },
      "charge": 0,
      "mass": 152.27690994520327,
      "mf": "C11H20",
      "monoisotopicMass": 152.1565006446,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      4,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gJP@DjZhCaB\`eAyBIgzI@xUT\\Jh",
      "dax@@DjUZjh@xPJBJCuADXfYaY~bHCaUPxUP",
      "dmt@@DjUVvFjjjdBbb@xPJBJCpaDXfYaYTMgY~bHCaUPxUP",
      "dkl@@DjUVuXZjjjk@hh\`R@xPJBJCvaDXfYaYTMgXLSb}~bHCaUPxUP",
    ],
    "idCode": "dg|H\`CAYRYVugiiVjjjfh@@",
    "mfInfo": {
      "atoms": {
        "C": 12,
        "H": 19,
        "O": 1,
      },
      "charge": 0,
      "mass": 179.27911001220102,
      "mf": "C12H19O",
      "monoisotopicMass": 179.14359023194,
      "unsaturation": 3.5,
    },
  },
  {
    "atomMap": [
      7,
      12,
    ],
    "cleavedBonds": [
      {
        "atom1": 7,
        "atom2": 8,
        "index": 7,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "didH@@RYVzYjjiBHX\`NBb\`R\`J\`Z\`}bXTMGzDdNETcaUDxUSNET",
      "dcLH@@RYVUzYjjjkBHjab@xJJAJ@jAjCwIfXTUCQvSgzDdNETcaUDxUSNET",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`J\`Z\`|jYfEEPt]\`yNKqy~aICaUHxUQNETsaU@",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhBhFhOZfYaQTMGXNSb}lGgzDdNETcaUDxUSNET",
    ],
    "idCode": "do|HPDAYyYR[Yg]YVZjjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 12,
        "H": 20,
        "O": 1,
      },
      "charge": 0,
      "mass": 180.28705076625678,
      "mf": "C12H20O",
      "monoisotopicMass": 180.15141526417,
      "unsaturation": 3,
    },
  },
  {
    "atomMap": [
      8,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gB\`@DchC\`b\`e@jCTGzE@xUT\\JiNEUgBj@",
      "daD@@DjWZZjjdAT\`xHJBJBjAjCqADYTMgzD\`NEUCaUTxUSNET",
      "dcLH@@RYVUZYjjjkBUQdGAIPYPEPUP^yLsBbhZNp\\PdQpjl\\JhgBjipj\`",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`dhLhBhJhOJfYaQTMGXNSbqo_hRHxUVNETSaUTxUP",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GADTFJ@eAR\`|YFXpdTad\\pVRqTZxvVs}BHapjlNETQpjjNET",
    ],
    "idCode": "do|@P@V^VTfYY_uijjjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 13,
        "H": 24,
      },
      "charge": 0,
      "mass": 180.33014475489688,
      "mf": "C13H24",
      "monoisotopicMass": 180.18780077352,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gC\`@Dij@xPhIP^PrY~bPNEUGBj@",
      "gNp@DiYjj@xPhIP^HrXhv_hdCaUQpj\`",
      "diD@@DiYVjj\`Ca@hHhO\\FQbQfEeXw_hb@xUTNET",
      "dmt@@DiYWafjjjdRcb@xPJBJCtadXdYaYVMwPN_hb@xUTNET",
    ],
    "idCode": "foAAB@K@VTee[V]gEZjjjjZ\`@@",
    "mfInfo": {
      "atoms": {
        "C": 13,
        "H": 21,
        "O": 1,
      },
      "charge": 0,
      "mass": 193.30572741704782,
      "mf": "C13H21O",
      "monoisotopicMass": 193.15924029640001,
      "unsaturation": 3.5,
    },
  },
  {
    "atomMap": [
      8,
      14,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 11,
        "index": 10,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 12,
        "atom2": 14,
        "index": 13,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCvIfXT_hRPxURNEUcaUDxUP",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`|rYfEEPt]gzDdNETcaUXxUQNET",
      "dk\\H@@RYVUVftvjjjjpjJHZ\`NBb\`R\`r\`J\`}JYfEEPt]\`yNKwzDdNETcaUXxUQNET",
      "dg|H@@RYVUWimMjjjjhbhhajMHC\`hhDhLhBhOZfYaQTMGXNSb}lGgzDdNETcaUXxUQNET",
    ],
    "idCode": "f\`a@A@@KNeeIfV]}YJjjjjj\`@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 26,
      },
      "charge": 0,
      "mass": 194.3567621597437,
      "mf": "C14H26",
      "monoisotopicMass": 194.20345083798,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      11,
      15,
    ],
    "cleavedBonds": [
      {
        "atom1": 11,
        "atom2": 12,
        "index": 11,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
      {
        "atom1": 14,
        "atom2": 15,
        "index": 14,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 0,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daDH@@RYVifjj\`j@xJJAJCJ@jCvIfXT_hRPxURNEUcaUDxUP",
      "dmtH@@RYVUifjjjpjJHZ\`NBb\`R\`r\`J\`|rYfEEPt]gzDdNETcaUXxUQNET",
      "dg|H@@RYVUUieMjjjjhbhhajEhC\`hhDhLhBhORfYaQTMGXNSbq~aICaUHxUVNETSaU@",
      "foAA@@@YEDeDddcQbcMUUUUQBTTHYPj\`GAHTBJCE@R\`|YFXpdTad\\pVRqTZxvVs}BIApjdNEUapjbNET",
    ],
    "idCode": "f\`a@A@@KNegHhheDdlTrUUUUUT@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 26,
      },
      "charge": 0,
      "mass": 194.3567621597437,
      "mf": "C14H26",
      "monoisotopicMass": 194.20345083798,
      "unsaturation": 2,
    },
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gC\`@Dij@xPhIP^PrY~bPNEUGBj@",
      "gJP@DiZhCaB\`eAxcIbs]~bPNEUGBj@",
      "gNp@Di^jj@xPhIP^hrXlwFOtRApjhxUP",
      "diD@@Di^Vjj\`Ca@hHhO\\FQbYgEEXv_hb@xUTNET",
    ],
    "idCode": "f\`qAB@G@VTeYVugxKQjjjjij@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 23,
        "O": 1,
      },
      "charge": 0,
      "mass": 207.33234482189462,
      "mf": "C14H23O",
      "monoisotopicMass": 207.17489036086002,
      "unsaturation": 3.5,
    },
  },
  {
    "atomMap": [
      8,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "gJP@DjZhCaB\`eAyBIgzI@xUT\\Jh",
      "dax@@DjVZjj@hCa@hHhOTDQbQfEwzH\`NEUCaU@",
      "dcLH@@rJIJIHusUUUVEQUGDApaTCTGnSBbh[Nb^WOtQB\\JigBj@",
      "dk\\H@@RYVU^ntvjjjjpjJhx\`NDJ\`Z\`|jYfEEPv]@yOKay~bHSaULxUP",
    ],
    "idCode": "f\`qAB@E@V\\bbbTRqRSNRuUUTuUP@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 23,
        "O": 1,
      },
      "charge": 0,
      "mass": 207.33234482189462,
      "mf": "C14H23O",
      "monoisotopicMass": 207.17489036086002,
      "unsaturation": 3.5,
    },
  },
  {
    "atomMap": [
      4,
      7,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "isAromatic": false,
        "nbRings": 1,
        "order": 1,
        "ringIndex": 1,
      },
    ],
    "fragmentType": "cyclic",
    "hoses": [
      "gC\`@Dij@xHhIPJ\`uA~aPNEUGBjSaUYpj\`",
      "daD@@DjWzZjjdAM@xHJBJ@jAjCqADXVMGzD\`NEUCaUDxUSNET",
      "dcL@@LdbTTSUSUUUU\`TIQI@\\DEAE@UAMAxPbLRL\`lkIa\\PdApjh\\JhgBjepj\`",
      "foA@@@LdbTTVrJiKbjjjjjh\`JDTXhdPC\`\`JBE@R\`eP^LBHXbLPSJXsNXKIP[KY~aD@xUTGBjHxUTgBj@",
      "fhiA@@@YEDeDddbeQbcMUUUUUDIQPaeBj@\\DYPRhETAjCsdYcBQRFQsAYKEQkcY[GY{OtHcGBjdxURgBjLxUP",
    ],
    "idCode": "fhqAA@M@VSKNQQQQKIRiLEUUUMUP@@",
    "mfInfo": {
      "atoms": {
        "C": 14,
        "H": 24,
        "O": 1,
      },
      "charge": 0,
      "mass": 208.34028557595042,
      "mf": "C14H24O",
      "monoisotopicMass": 208.18271539309,
      "unsaturation": 3,
    },
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "eM@HzCaJBhOIewzJCaUSaU@",
      "gC\`@Dkj@xPhIP^pr\\lQHGBjcaU@",
      "gJP@DkZhCaB\`eAxcIrsY~bPNEUGBj@",
      "gNp@DkVjj@xPhIP^hr\\lvFOtRApjhxUP",
    ],
    "idCode": "fhiAB@O@VTeVUmYqRMZjjjjfh@@",
    "mfInfo": {
      "atoms": {
        "C": 15,
        "H": 25,
        "O": 1,
      },
      "charge": 0,
      "mass": 221.35896222674143,
      "mf": "C15H25O",
      "monoisotopicMass": 221.19054042532002,
      "unsaturation": 3.5,
    },
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "hoses": [
      "eF@Hp\\IPUA~b\`xUTxUP",
      "eM@HzCaJBhOIewzJCaUSaU@",
      "gJP@DkjhCaB\`eA{CIrc}D\`\\JjNET",
      "dax@@DkfZjjDhCa@hHhOTFQrQdEgzH\`NEUCaU@",
      "dcLH@@rJIJIHusUUUVEQUGDApcTDtGnSBbh[Nb^WOtQF\\JjWBj@",
    ],
    "idCode": "fhiAB@M@V\\bTTRbVJRxIQjjjijj\`@@",
    "mfInfo": {
      "atoms": {
        "C": 15,
        "H": 25,
        "O": 1,
      },
      "charge": 0,
      "mass": 221.35896222674143,
      "mf": "C15H25O",
      "monoisotopicMass": 221.19054042532002,
      "unsaturation": 3.5,
    },
  },
  {
    "fragmentType": "molecular ion",
    "idCode": "fhiA@@@YEDeDddbeQbcMUUUUU@@@",
    "mfInfo": {
      "atoms": {
        "C": 16,
        "H": 28,
        "O": 1,
      },
      "charge": 0,
      "mass": 236.393520385644,
      "mf": "C16H28O",
      "monoisotopicMass": 236.21401552201002,
      "unsaturation": 3,
    },
  },
]
`;

exports[`fragment CCCCCC(CC)CCC 1`] = `
[
  {
    "atomMap": [
      0,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      7,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      10,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eFBAYc@@",
    "mfInfo": {
      "atoms": {
        "C": 1,
        "H": 3,
      },
      "charge": 0,
      "mass": 15.03455815890258,
      "mf": "CH3",
      "monoisotopicMass": 15.02347509669,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "eMBAYRZ@",
    "mfInfo": {
      "atoms": {
        "C": 2,
        "H": 5,
      },
      "charge": 0,
      "mass": 29.061175563749384,
      "mf": "C2H5",
      "monoisotopicMass": 29.03912516115,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gC\`H@liKT@@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 7,
      },
      "charge": 0,
      "mass": 43.08779296859618,
      "mf": "C3H7",
      "monoisotopicMass": 43.05477522561,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      8,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 8,
        "index": 7,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gC\`H@liKT@@",
    "mfInfo": {
      "atoms": {
        "C": 3,
        "H": 7,
      },
      "charge": 0,
      "mass": 43.08779296859618,
      "mf": "C3H7",
      "monoisotopicMass": 43.05477522561,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gJPH@liJuP@",
    "mfInfo": {
      "atoms": {
        "C": 4,
        "H": 9,
      },
      "charge": 0,
      "mass": 57.114410373442986,
      "mf": "C4H9",
      "monoisotopicMass": 57.07042529007,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      4,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gGPH@liJmU@@",
    "mfInfo": {
      "atoms": {
        "C": 5,
        "H": 11,
      },
      "charge": 0,
      "mass": 71.1410277782898,
      "mf": "C5H11",
      "monoisotopicMass": 71.08607535453,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 4,
        "atom2": 5,
        "index": 4,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "gNpH@liLkUT@@",
    "mfInfo": {
      "atoms": {
        "C": 6,
        "H": 13,
      },
      "charge": 0,
      "mass": 85.16764518313659,
      "mf": "C6H13",
      "monoisotopicMass": 85.10172541899,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      4,
    ],
    "cleavedBonds": [
      {
        "atom1": 3,
        "atom2": 4,
        "index": 3,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dax@\`@VTeeZjh@@",
    "mfInfo": {
      "atoms": {
        "C": 7,
        "H": 15,
      },
      "charge": 0,
      "mass": 99.1942625879834,
      "mf": "C7H15",
      "monoisotopicMass": 99.11737548345,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      3,
    ],
    "cleavedBonds": [
      {
        "atom1": 2,
        "atom2": 3,
        "index": 2,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "diD@\`@VTeYVjj\`@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 17,
      },
      "charge": 0,
      "mass": 113.22087999283019,
      "mf": "C8H17",
      "monoisotopicMass": 113.13302554791,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 8,
        "index": 7,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "diD@\`@VTfUvjj\`@",
    "mfInfo": {
      "atoms": {
        "C": 8,
        "H": 17,
      },
      "charge": 0,
      "mass": 113.22087999283019,
      "mf": "C8H17",
      "monoisotopicMass": 113.13302554791,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      2,
    ],
    "cleavedBonds": [
      {
        "atom1": 1,
        "atom2": 2,
        "index": 1,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "ded@\`@VTeVUjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 19,
      },
      "charge": 0,
      "mass": 127.247497397677,
      "mf": "C9H19",
      "monoisotopicMass": 127.14867561237,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      5,
    ],
    "cleavedBonds": [
      {
        "atom1": 5,
        "atom2": 6,
        "index": 5,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "ded@\`@VTfUWjjj@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 19,
      },
      "charge": 0,
      "mass": 127.247497397677,
      "mf": "C9H19",
      "monoisotopicMass": 127.14867561237,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      8,
    ],
    "cleavedBonds": [
      {
        "atom1": 8,
        "atom2": 9,
        "index": 8,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "ded@\`@VTee]jjj@@",
    "mfInfo": {
      "atoms": {
        "C": 9,
        "H": 19,
      },
      "charge": 0,
      "mass": 127.247497397677,
      "mf": "C9H19",
      "monoisotopicMass": 127.14867561237,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      1,
    ],
    "cleavedBonds": [
      {
        "atom1": 0,
        "atom2": 1,
        "index": 0,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dmT@\`@VTeUeZjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 21,
      },
      "charge": 0,
      "mass": 141.2741148025238,
      "mf": "C10H21",
      "monoisotopicMass": 141.16432567683,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      6,
    ],
    "cleavedBonds": [
      {
        "atom1": 6,
        "atom2": 7,
        "index": 6,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dmT@\`@VTeeUzjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 21,
      },
      "charge": 0,
      "mass": 141.2741148025238,
      "mf": "C10H21",
      "monoisotopicMass": 141.16432567683,
      "unsaturation": 0.5,
    },
  },
  {
    "atomMap": [
      9,
    ],
    "cleavedBonds": [
      {
        "atom1": 9,
        "atom2": 10,
        "index": 9,
        "order": 1,
      },
    ],
    "fragmentType": "acyclic",
    "idCode": "dmT@\`@VTeYWZjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 10,
        "H": 21,
      },
      "charge": 0,
      "mass": 141.2741148025238,
      "mf": "C10H21",
      "monoisotopicMass": 141.16432567683,
      "unsaturation": 0.5,
    },
  },
  {
    "fragmentType": "molecular ion",
    "idCode": "dmT@@DjUWzjjh@@",
    "mfInfo": {
      "atoms": {
        "C": 11,
        "H": 24,
      },
      "charge": 0,
      "mass": 156.3086729614264,
      "mf": "C11H24",
      "monoisotopicMass": 156.18780077352,
      "unsaturation": 0,
    },
  },
]
`;
